--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "axios": "^1.1.3",
+    "socket.io-client": "^4.5.3"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7"
