--- a/package.json
+++ b/package.json
@@ -9,21 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "tailwindcss": "3.2.2",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.1.3",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.2",
     "google-map-react": "^2.2.0",
+    "joi": "^17.7.0",
     "next": "13.0.2",
     "postcss": "^8.4.18",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4",
-    "axios": "^1.1.3",
-    "socket.io-client": "^4.5.3"
+    "react-hook-form": "^7.39.3",
+    "secure-ls": "^1.2.6",
+    "socket.io-client": "^4.5.3",
+    "sweetalert": "^2.1.2",
+    "tailwindcss": "3.2.2",
+    "typescript": "4.8.4"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7"
