--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.3",
+    "react-transition-group": "^4.4.5",
     "secure-ls": "^1.2.6",
     "socket.io-client": "^4.5.3",
     "sweetalert": "^2.1.2",
@@ -31,6 +32,7 @@
     "typescript": "4.8.4"
   },
   "devDependencies": {
-    "@types/google-map-react": "^2.1.7"
+    "@types/google-map-react": "^2.1.7",
+    "@types/react-transition-group": "^4.4.5"
   }
 }
