--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.0.2",
     "google-map-react": "^2.2.0",
     "joi": "^17.7.0",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.2",
     "postcss": "^8.4.18",
     "react": "18.2.0",
